--- a/reveal.js-3.3.0/index.html
+++ b/reveal.js-3.3.0/index.html
@@ -142,6 +142,11 @@
 						<aside class="notes">
 							Two-thirds of smartphone users install zero apps per month. They've got a handful of apps
 							that they use for most purposes. In fact, 42% of app time happens in just one app.
+
+							So here's the problem - nobody will ever find your app. If by some miracle someone does,
+							they'll get distracted while attempting to download it. Even if they do download it, they'll
+							never actually use it. That's not my opinion. That's science - look, I even had graphs and
+							plausible-sounding statistics.
 						</aside>
 					</section>
 				</section>
@@ -184,8 +189,8 @@
 					<section>
 						1. HTTPS only (localhost counts as secure)
 						<aside class="notes">
-							This is part of Google's move to prefer secure origins for new features. And service workers allow
-							you to intercept any http request made on the page, so that's pretty powerful.
+							This is part of Google's move to prefer secure origins for powerful new features. And service
+							workers allow you to intercept any http request made on the page, so that's pretty powerful.
 
 							http://www.chromium.org/Home/chromium-security/prefer-secure-origins-for-powerful-new-features
 						</aside>
@@ -201,6 +206,7 @@
 						<aside class="notes">
 							Note that sw.js is in the root of the site - you can't ask for a higher
 							level of scope, but you can ask for less. The API also uses promises.
+							(Can have more than one sw with different scopes?)
 
 							That call to "register" loads the service worker, and triggers an "install" event.
 						</aside>
@@ -250,16 +256,146 @@
 							updates - but this fallback to the browser cache means you’d still need to include the
 							cache-busting. But at least you’d have one place to do all your cache-busting.
 
-							Memory limits - I couldn’t find anything which states exactly what the limits are.
-							They’re browser-specific, and the spec states that the whole cache will be deleted
-							if limits are reached, rather than piecemeal. Some suggest the limit is 5MB, shared
-							amongst local storage, indexed db, cache.
+							Storage limits - shared for all storage areas (local, indexed db, cache) for domain.
+							Most browsers limit to about 50Mb, but can query this using Quota API. But you should
+							code to deal with having all your cached data removed by a user.
 						</aside>
 					</section>
 					<section>
 						Don't use my dodgy code.
 						<p><a href="https://github.com/GoogleChrome/sw-precache">sw-precache (https://github.com/GoogleChrome/sw-precache)</a></p>
 						<p><a href="https://googlechrome.github.io/sw-toolbox/">sw-toolbox (https://googlechrome.github.io/sw-toolbox/)</a></p>
+					</section>
+				</section>
+				<section data-background-image="images/shinesolutionslogo.png" data-background-position="top right" data-background-size="20%">
+					Manifests
+					<section>
+						Link in the header to your json file
+					</section>
+					<section>
+						JSON manifest
+						<aside class="notes">
+							can set a few properties relating to colours, titles, preferred orientation, start page
+							<!-- TODO: check if that install banner is controlled from here anyway -->
+						</aside>
+					</section>
+					<section>
+						When do you get to install?
+						<aside class="notes">
+							Having a manifest triggers a few rules in Chrome.
+						</aside>
+					</section>
+					<section>
+						Insert chrome rules here.
+						<aside class="notes">
+							Something like: have to have visited more than twice, with 5 minutes in between;
+							has to have a service worker?
+						</aside>
+					</section>
+					<section>
+						Annoying?
+						<aside class="notes">
+							Hold on, weren't you banging on about not annoying users before?
+							Maybe, in your extensive user testing ("asking your mum"), you think this is getting
+							triggered too soon and you want control over when this install happens? Like at the
+							end of checkout or something, when your user is more invested or trusting of you. Rather
+							than in the middle of checkout and you might scare them off.
+						</aside>
+					</section>
+					<section>
+						beforeinstallprompt event
+						<aside class="notes">
+							Yay, those boffins in the browser labs have thought of that. Listen for the
+							beforeinstallprompt event and you can choose to stop it from triggering
+							and save it for later.
+						</aside>
+					</section>
+				</section>
+				<section data-background-image="images/shinesolutionslogo.png" data-background-position="top right" data-background-size="20%">
+					Push notifications
+					<section>
+						More likely to convert
+						<aside class="notes">
+							A user that has received a timely, relevant push notification is something-something more likely
+							to convert into a sale or evolve into a charizard or something. There's an article in your
+							reading list somewhere, Jones.
+						</aside>
+					</section>
+					<section>
+						Ask for permission
+						<aside class="notes">
+							Choose a good moment to ask the user. Not when they first turn up.
+						</aside>
+					</section>
+					<section>
+						Screenshot of the "asking for permission" code
+					</section>
+					<section>
+						Register for push events
+					</section>
+					<section>
+						Send one
+					</section>
+					<section>
+						Receive
+					</section>
+				</section>
+				<section data-background-image="images/shinesolutionslogo.png" data-background-position="top right" data-background-size="20%">
+					The bad news
+					<section>
+						Browser support
+					</section>
+					<section>
+						Android - two thumbs up
+					</section>
+					<section>
+						List of APIs and ticks next to them (sw, cache, indexeddb, push notifications, manifest)
+					</section>
+					<section>
+						iOS
+						<aside class="notes">
+							Safari = IE6 of the mobile world.
+							Chrome + Firefox on iOS have to use the same underlying browser tech (webkit).
+							But - remember the progressive part of the name. There's nothing here that will
+							break your mobile site on Safari (if you implement it correctly, anyway). And the
+							webkit people have got service workers on their radar.
+
+							(Push notifications work on desktop Safari, but not mobile)
+						</aside>
+					</section>
+					<section>
+						List of APIs and crosses / caveats
+					</section>
+				</section>
+				<section data-background-image="images/shinesolutionslogo.png" data-background-position="top right" data-background-size="20%">
+					When should we use PWAs?
+					<section>
+						Anything where your business model does not involve selling your app in a store
+					</section>
+					<section>
+						If you've got a mobile site, but don't know if you want a native one.
+					</section>
+					<section>
+						You don't want to have to implement another "INSTALL" popup.
+					</section>
+				</section>
+				<section data-background-image="images/shinesolutionslogo.png" data-background-position="top right" data-background-size="20%">
+					Homework
+					<section>
+						Offline-first udacity course
+					</section>
+					<section>
+						Google's developer pages
+					</section>
+					<section>
+						People to follow
+						Alex Russell, Jake Archibald, Addy Osmani
+					</section>
+				</section>
+				<section data-background-image="images/shinesolutionslogo.png" data-background-position="top right" data-background-size="20%">
+					Who was that masked man?
+					<section>
+						Troy McClure
 					</section>
 				</section>
 			</div>
