added mention of lighthouse

--- a/index.html
+++ b/index.html
@@ -508,6 +508,9 @@
 						<a href="https://jakearchibald.github.io/isserviceworkerready/index.html">isserviceworkerready?</a>
 					</section>
 					<section>
+						<a href="https://github.com/GoogleChrome/lighthouse">Lighthouse - PWA audit tool</a>
+					</section>
+					<section>
 						People to follow<br>
 						Alex Russell - <a href="https://twitter.com/slightlylate">@slightlylate</a><br>
 						Addy Osmani - <a href="https://twitter.com/addyosmani">@addyosmani</a><br>
