simplified manifest section slightly

--- a/index.html
+++ b/index.html
@@ -583,7 +583,9 @@
 						</aside>
 					</section>
 					<section>
-						<img src="images/manifest-1.png">
+						<pre><code data-trim>
+							<link href="manifest.json" rel="manifest">
+						</code></pre>
 					</section>
 					<section>
 						<pre><code data-trim>
