fixed the start_url in the manifest

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@ self.addEventListener('fetch', function(e) {</span>
 						<pre><code data-trim data-noescape>
 {
 <span class="fragment">  "short_name": "POW! 2016",</span>
-<span class="fragment">  "start_url": "/pow/",</span>
+<span class="fragment">  "start_url": "index.html",</span>
 <span class="fragment">  "display": "standalone",</span>
 <span class="fragment">  "icons": [{
       "src": "images/logo.png",
