fixed the video playback, removed instant apps bit

--- a/index.html
+++ b/index.html
@@ -226,10 +226,6 @@
 						</aside>
 					</section>
 					<section>
-            <h3>(Instant Apps)</h3>
-            <h4 class="fragment">(... not available yet)</h4>
-					</section>
-					<section>
 						<h3>But apart from that?</h3>
 					</section>
 					<section>
@@ -298,6 +294,12 @@
 							step away from getting push notifications for your site as well.
 						</aside>
 					</section>
+          <section>
+            <a href="https://nomiddlename.github.io/pow/">https://nomiddlename.github.io/pow/ - demo site</a>
+          </section>
+          <section>
+            <video data-autoplay src="images/pow-demo.mp4" muted="true" controls="true" width="80%">
+          </section>
 				</section>
 				<!--
 					************* SERVICE WORKERS *************
@@ -686,12 +688,6 @@ self.addEventListener('fetch', function(e) {</span>
 							Now, when we click onto another page, we get this.
 						</aside>
 					</section>
-          <section>
-            <video src="images/pow-demo.mp4" muted="true" autoplay="true" width="80%">
-          </section>
-          <section>
-            <a href="https://nomiddlename.github.io/pow/">https://nomiddlename.github.io/pow/ - demo site</a>
-          </section>
 					<section>
 						<h3>Don't use my dodgy code.</h3>
 						<p><a href="https://github.com/GoogleChrome/sw-precache">sw-precache (https://github.com/GoogleChrome/sw-precache)</a></p>
