added link to talk on the end slide

--- a/index.html
+++ b/index.html
@@ -1780,45 +1780,13 @@ self.addEventListener('push', function(e) {</span>
 					<div>
 						<img src="images/lone-ranger.jpg" width="20%" style="float:left;margin-left:20%;">
 						<p>
-							Gareth Jones<br><a href="https://twitter.com/nomiddlename">@nomiddlename</a>
+							Gareth Jones<br>
+              <a href="https://twitter.com/nomiddlename">@nomiddlename</a><br>
+              <a href="https://nomiddlename.github.io/yow-connected-2016/">https://nomiddlename.github.io/yow-connected-2016/</a>
 						</p>
 					</div>
 				</section>
 			</section>
-
-				<!--
-					<section>
-						When should we use PWAs?
-						<section>
-							Anything where your business model does not involve selling your app in a store
-							<aside class="notes">
-								This one is pretty obvious - you're going to bypass the app stores.
-
-								An ecommerce site is perfect - nobody wants to install an app just to buy something,
-								but if you've got repeat customers, they're going to be given the option of installing
-								your PWA to their homepage, and you can ask nicely if they want push notifications.
-							</aside>
-						</section>
-						<section>
-							If you've got a mobile site, but don't know if you want a native one.
-							<aside class="notes">
-								You can improve the performance of your mobile site through the use
-								of service workers to cache data. Add a manifest to get the installable
-								feature. Adding push notifications is probably a little bit more work,
-								but still less than making a full Android app.
-
-								I used to work for A&amp;R Bookworld - they had a mobile site, but no apps.
-								This was because most of their traffic came from Google: searches, or ad words.
-								Nobody wants to install your app if they're looking for a cheap book, so
-								there's no benefit in them developing apps.
-							</aside>
-						</section>
-						<section>
-							You never want to have to implement another "INSTALL" popup.
-						</section>
-					</section>
-
- -->
 			</div>
 		</div>
 
